--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 KERNEL_SOURCE=https://github.com/Diva-Room/Miku_kernel_xiaomi_wayne
-KERNEL_SOURCE_BRANCH=TDA
-KERNEL_DEFCONFIG=vendor/wayne_defconfig
-KERNEL_FILE=Image.gz-dtb
+KERNEL_SOURCE_BRANCH=tiramisu
+KERNEL_DEFCONFIG=vendor/venus_defconfig
+KERNEL_FILE=Image.gz
 TARGET_ARCH=arm64
 
 # Clang
