--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
-KERNEL_SOURCE=https://github.com/Diva-Room/Miku_kernel_xiaomi_wayne
+KERNEL_SOURCE=https://github.com/Evolution-X-Devices/kernel_xiaomi_venus
 KERNEL_SOURCE_BRANCH=tiramisu
 KERNEL_DEFCONFIG=vendor/venus_defconfig
 KERNEL_FILE=Image.gz
@@ -29,5 +29,5 @@ USE_OVERLAYFS=false
 NEED_DTBO=false
 
 # Build boot images
-MAKE_BOOT_IMAGE=true
+MAKE_BOOT_IMAGE=false
 SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot.img
