--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 KERNEL_SOURCE=https://github.com/Evolution-X-Devices/kernel_xiaomi_venus
 KERNEL_SOURCE_BRANCH=tiramisu
 KERNEL_DEFCONFIG=vendor/venus_defconfig
-KERNEL_FILE=Image
+KERNEL_FILE=Image.gz
 TARGET_ARCH=arm64
 
 # Clang
@@ -22,7 +22,7 @@ DISABLE-LTO=false
 # KernelSU flags
 USE_KERNELSU=true
 KERNELSU_TAG=main
-USE_KPROBES=false
+USE_KPROBES=true
 USE_OVERLAYFS=false
 
 # DTBO image
