--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 KERNEL_SOURCE=https://github.com/Evolution-X-Devices/kernel_xiaomi_venus
 KERNEL_SOURCE_BRANCH=tiramisu
 KERNEL_DEFCONFIG=vendor/venus_defconfig
-KERNEL_FILE=Image.gz
+KERNEL_FILE=Image.gz-dtb
 TARGET_ARCH=arm64
 
 # Clang
