--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 KERNEL_SOURCE=https://github.com/Evolution-X-Devices/kernel_xiaomi_venus
 KERNEL_SOURCE_BRANCH=tiramisu
 KERNEL_DEFCONFIG=vendor/venus_defconfig
-KERNEL_FILE=Image.gz-dtb
+KERNEL_FILE=Image.gz
 TARGET_ARCH=arm64
 
 # Clang
@@ -16,7 +16,7 @@ CUSTOM_CLANG_BUILD_COMMAND:CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=$GITHUB
 ## AOSP
 CLANG_BRANCH=master-kernel-build-2022
 CLANG_VERSION=r450784d
-EXTRA_BUILD_COMMAND:LD=ld.lld
+EXTRA_BUILD_COMMAND:LD=ld.lld LLVM=1 LLVM_IAS=1
 DISABLE-LTO=false
 
 # KernelSU flags
@@ -26,7 +26,7 @@ USE_KPROBES=true
 USE_OVERLAYFS=false
 
 # DTBO image
-NEED_DTBO=false
+NEED_DTBO=true
 
 # Build boot images
 MAKE_BOOT_IMAGE=false
