--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 KERNEL_SOURCE=https://github.com/Evolution-X-Devices/kernel_xiaomi_venus
 KERNEL_SOURCE_BRANCH=tiramisu
 KERNEL_DEFCONFIG=vendor/venus_defconfig
-KERNEL_FILE=Image.gz
+KERNEL_FILE=Image
 TARGET_ARCH=arm64
 
 # Clang
@@ -15,7 +15,7 @@ CUSTOM_CLANG_BUILD_COMMAND:CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=$GITHUB
 
 ## AOSP
 CLANG_BRANCH=master-kernel-build-2022
-CLANG_VERSION=r450784d
+CLANG_VERSION=r450784e
 EXTRA_BUILD_COMMAND:LD=ld.lld LLVM=1 LLVM_IAS=1
 DISABLE-LTO=false
 
@@ -23,7 +23,7 @@ DISABLE-LTO=false
 USE_KERNELSU=true
 KERNELSU_TAG=main
 USE_KPROBES=true
-USE_OVERLAYFS=false
+USE_OVERLAYFS=true
 
 # DTBO image
 NEED_DTBO=false
