--- a/config.env
+++ b/config.env
@@ -22,11 +22,11 @@ DISABLE-LTO=false
 # KernelSU flags
 USE_KERNELSU=true
 KERNELSU_TAG=main
-USE_KPROBES=true
+USE_KPROBES=false
 USE_OVERLAYFS=true
 
 # DTBO image
-NEED_DTBO=true
+NEED_DTBO=false
 
 # Build boot images
 MAKE_BOOT_IMAGE=false
